--- a/web_app/skel/www/.htaccess
+++ b/web_app/skel/www/.htaccess
@@ -7,4 +7,4 @@ RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteCond %{REQUEST_FILENAME} !-s
 RewriteCond %{REQUEST_FILENAME} !-l
-RewriteRule ^(.+)$ /index.php?%{QUERY_STRING} [L]
+RewriteRule ^(.+)$ /index.php [L,QSA]
